hphp/hack/test/typecheck/reserved_name4.php
<?hh

namespace X {
  const int __FILE__ = 1;
}
